--- a/.gitignore
+++ b/.gitignore
@@ -137,6 +137,6 @@ dmypy.json
 assets/tmp_local_meme.JPG
 assets/common_features/tmp_local_meme.JPG
 assets/logs/logs.log
-tests.py
+test.py
 logs.log
 ideas.txt 
